# dex-service-rust

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs
src/account/: handler.rs
src/database/: mod.rs  pool.rs  schema.rs
src/database/migrations/: diesel.txt
src/database/migrations/2023-01-25-233847_accounts/: up.sql
src/database/migrations/2023-02-05-202131_accounts/: up.sql
src/database/models/: account.rs
src/market/: market.rs
src/market/json/address_book/: assets.json  exchanges.json
src/proto/: account.proto  trade.proto
src/trade/: handler.rs  mod.rs  trade.rs
src/wallet/: mod.rs  wallet.rs
src/wallet/core/: address.rs  error.rs  signature.rs  transaction.rs
src/wallet/keystore/: cipher.rs  error.rs  kdf.rs  mod.rs  prf.rs
src/wallet/keystore/serialize/: address.rs  byte_array.rs  crypto.rs  error.rs  mod.rs
src/wallet/util/: mod.rs  rlp.rs
