[package]
name = "dex-service"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.0.2", features = ["serde_json","postgres", "uuid", "chrono", "r2d2"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.8.3", features = ["tls"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
secp256k1 = { version = "0.26.0", features = ["std", "rand"] }
rand = {version = "0.8.5", features = ["std"]}
prost = "0.11.5"
prost-derive = "0.11.5"
prost-types = "0.11.5"
serde = "1.0.101"
serde_json = "1.0.41"
serde_derive = "1.0.101"
dotenv = "0.15.0"
chrono = "0.4.9"
r2d2 = "0.8.6"
r2d2-diesel = "1.0.0"
json = "0.12.0"
futures = "0.3.25"
web3 = "0.18.0"
web3-keystore = "0.5.2"
hex = "0.4.3"
anyhow = "1.0.68"

time = "0.3.17"
lazy_static = "1.0"
log = "0.4"
regex = "1.0"
glob = "0.3.1"
byteorder= "1.2"
num = "0.4.0"
bitcoin = "0.29.2"
aes = "0.8.2"
sha2 = "0.10.6"
sha3 = "0.10.6"
pbkdf2 = "0.12.1"
scrypt = "0.11.0"
hmac = "0.12.1"
cipher = "0.4.3"
cfb-mode = "0.8.2"

[build-dependencies]
tonic-build = "0.8.4"
